--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             <li class="dropdown-item">C++</li>
             <li class="dropdown-item">Web Development</li>
             <li class="dropdown-item">Python</li>
+            <li class="dropdown-item">Machine Learning</li>
           </ul>
         </li>
         <li class="nav-item">
